src/css/style.css
/* ... */
.dark {
  /* Dark Mode */
  --bg-primary: #000000;
  --bg-secondary: #151515;
  --bg-tertiary: #1a1a1a;
  --bg-service-card: #000000;
  --bg-service-hovered: #151515;
  --openToWork-bg: rgba(24, 24, 27, 0.741);
  --openToWork-hovered: rgba(39, 39, 42, 0.729);
  --stack-link: #18181b;
  --light-gray-bg: rgba(67, 67, 67, 0.212);
  --profile-gradient: linear-gradient(
    to bottom,
    rgba(0, 0, 0, 0) 60%,
    rgb(0, 0, 0) 100%
  );
  --text-primary: #ffffff;
  --text-secondary: #9f9fa9;
  --text-tertiary: #848484;
  --text-tag: #a1a1a1;
  --text-service-hovered: #ffffff;
  --description-service-hovered: #828282;
  --text-label: #9f9fa9;
  --border-primary: #3a3a3a;
  --border-secondary: #3f3f3f;
  --border-tertiary: #1d1d1d;
  --border-tag: #262626;
  --border-services: #252525;
  --border-resume: #3f3f46;
  --shadow-service: none;
  --button-primary-text: #000000;
  --button-primary-bg: #ffffff;
  --button-primary-bg-hovered: #d2d2d2;
  --button-primary-disabled-bg: rgba(68, 68, 68, 0.639);
  --button-primary-disabled-text: #646464;
  --cta-button-hover: #bfbfbf;
  --surface-hover: #1f1f1f;
  --surface-active: #2a2a2a;
  --accent-soft: #3f3f3f;
  --accent-medium: #2f2f2f;
  --accent-strong: #a8a8a8;
  --selection-bg: #3f3f3f;
}

body {
  font-family: "Inter", sans-serif;
  background-color: var(--bg-primary);
  color: var(--text-primary);
  padding-inline: 25rem;
}
body::selection {
  background-color: var(--selection-bg);
  color: var(--text-primary);
}
@media (width <= 1280px) {
  body {
    padding-inline: 10rem;
  }
}
@media (width <= 884px) {
  body {
    padding-inline: 5rem;
  }
}
@media (width <= 640px) {
  body {
    padding-inline: 1rem;
  }
}
@media (width <= 400px) {
  body {
    padding-inline: 0.7rem;
  }
}

textarea::-webkit-scrollbar {
  display: none;
}
textarea {
  -ms-overflow-style: none; /* IE and Edge */
  scrollbar-width: none; /* Firefox */
  background-color: var(--bg-secondary);
  color: var(--text-primary);
  border-color: var(--border-primary);
}

.blog-body {
  display: grid;
  grid-template-columns: 80% auto;
  gap: 3rem;
}
@media (width <= 1280px) {
  .blog-body {
    grid-template-columns: 75% auto;
    gap: 2.5rem;
  }
}
@media (width <= 884px) {
  .blog-body {
    gap: 2rem;
  }
}
@media (width <= 640px) {
  .blog-body {
    display: block;
  }
}
.blog-section {
  display: grid;
  gap: 2rem;
}
@media (width <= 1280px) {
  .blog-section {
    gap: 1.8rem;
  }
}
@media (width <= 884px) {
  .blog-section {
    gap: 3rem;
  }
}
@media (width <= 640px) {
  .blog-section {
    gap: 4rem;
  }
}
.blog-lastBlog {
  border-bottom: 1px solid var(--border-tertiary);
  padding-bottom: 2rem;
}
@media (width <= 640px) {
  .blog-lastBlog {
    padding-bottom: 3rem;
  }
}
.blog-lastBlog-card {
  background-color: var(--bg-secondary);
  padding: 1.5rem 1.5rem 1.5rem 1.7rem;
  display: grid;
  gap: 3rem;
  grid-template-columns: 47% auto;
  border: 1px dashed var(--border-secondary);
}
@media (width <= 640px) {
  .blog-lastBlog-card {
    padding: 1.2rem;
    grid-template-columns: none;
  }
}
.blog-lastBlog-card:hover {
  background-color: transparent;
  border: 1px dashed var(--text-primary);
}
.blog-lastBlog-card:hover h1 {
  text-decoration: underline;
}
.blog-lastBlog-card section {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}
.blog-lastBlog-card section span {
  font-size: 0.8rem;
  color: var(--text-tertiary);
}
.blog-lastBlog-card section h1 {
  margin-top: 0.4rem;
  font-size: 1.8rem;
  font-weight: 600;
  color: var(--text-primary);
  display: -webkit-box;
  line-clamp: 2;
  -webkit-line-clamp: 2;
  -webkit-box-orient: vertical;
  overflow: hidden;
}
@media (width <= 1280px) {
  .blog-lastBlog-card section h1 {
    font-size: 1.5rem;
  }
}
@media (width <= 884px) {
  .blog-lastBlog-card section h1 {
    font-size: 1.2rem;
  }
}
@media (width <= 640px) {
  .blog-lastBlog-card section h1 {
    font-size: 1.5rem;
  }
}
.blog-lastBlog-card section p {
  margin-block: 1rem 2rem;
  color: var(--text-secondary);
  display: -webkit-box;
  line-clamp: 3;
  -webkit-line-clamp: 3;
  -webkit-box-orient: vertical;
  overflow: hidden;
}
.blog-lastBlog-card img {
  height: 100%;
}
@media (width <= 640px) {
  .blog-lastBlog-card img {
    height: auto;
  }
}
.blog-list {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  column-gap: 2rem;
  row-gap: 4rem;
  list-style: none;
  padding: 0;
  margin: 0;
}
@media (width <= 1280px) {
  .blog-list {
    grid-template-columns: repeat(2, 1fr);
    column-gap: 1.3rem;
    row-gap: 3rem;
  }
}
@media (width <= 640px) {
  .blog-list {
    grid-template-columns: 1fr;
  }
}
.blog-list-section {
  display: grid;
  gap: 2rem;
}
@media (width <= 640px) {
  .blog-list-section {
    gap: 3rem;
  }
}
.blog-list__item {
  display: flex;
}
.blog-card {
  padding: 0.9rem;
  display: flex;
  flex-direction: column;
  gap: 1rem;
  width: 100%;
  text-decoration: none;
  color: inherit;
  overflow: hidden;
  border: 1px dashed transparent;
  transition: border 0.1s ease-in-out;
}
.blog-card:hover {
  border: 1px dashed var(--text-primary);
  background-color: transparent;
}
.blog-card:hover .blog-card__title,
.blog-card:hover .blog-card__link {
  text-decoration: underline;
}
.blog-card__media {
  position: relative;
  overflow: hidden;
}
.blog-card__cover {
  width: 100%;
  height: 15rem;
  object-fit: cover;
  object-position: center;
  display: block;
}
@media (width <= 1280px) {
  .blog-card__cover {
    height: 13rem;
  }
}
@media (width <= 884px) {
  .blog-card__cover {
    height: 10rem;
  }
}
@media (width <= 640px) {
  .blog-card__cover {
    height: 14rem;
  }
}
@media (width <= 400px) {
  .blog-card__cover {
    height: 13.5rem;
  }
}
@media (width <= 330px) {
  .blog-card__cover {
    height: 11rem;
  }
}
/* ... */

